# aroma_market_bot

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6028631a0fd6_initial.py
app/: app.py  config.py  database.py
app/handlers/: catalog.py  comments.py  common.py  loyalty.py  order.py
app/middlewares/: db_session.py
app/models/: __init__.py  base.py  order.py  order_item.py  product.py  user.py
app/schemas/: order.py  product.py  user.py
app/services/: ai_service.py  loyalty_service.py  order_service.py  product_service.py
scripts/: init_migrations.sh  seed_data.sql
