[tool.poetry]
name = "aroma-market-bot"
version = "0.1.0"
description = "Telegram бот для магазина Арома Маркет"
authors = ["Denis <denis@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0"
SQLAlchemy = "^2.0"
alembic = "^1.10"
pydantic = "^2.0"
pydantic-settings = "^2.0"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
asyncpg = "^0.30.0"
openai = "^1.76.2"
ollama = "^0.4.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0"
mypy = "^0.991"
black = "^23.3"
pytest = "^7.0"

[tool.ruff]
select = ["E", "F", "D", "B", "I", "N"]
ignore = ["D401"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"